  comboboxes. Associated classes include wxOwnerDrawnComboBox, wxComboPopup
  and wxBitmapComboBox.
- Further functionality including wxAnimationCtrl (moved from contrib/src/anim
  and enhanced), wxSimpleHtmlListBox, wxHyperlinkCtrl, wxColourPickerCtrl,
  wxDirPickerCtrl, wxFilePickerCtrl, wxFontPickerCtrl, wxCollapsiblePane,
  wxSearchCtrl, wxAboutBox, wxTreebook, tar streams.

2.8.6
-----

All (GUI):

- Added an optimization to UI updates on idle, by only updating when the window
  is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.
  
wxMSW:

- Fixed a bug with a spurious border appearing on wxStatusBar under Windows XP/Vista.


2.8.5
-----

All:

- Fixed hang in wxInputStream::ReadLine when no input is left by testing
  with CanRead before each character is read.

All (GUI):

- Added colour normalization to PNM image handler (Ray Johnston).
- Fixed selecting part of word from right to left in wxHTML (Michael Hieke).
- Selecting text in wxHTML with character precision was made easier, it's
  enough to select half of a character (Michael Hieke).
- Significantly improved startup times of XRC-based applications using
  embedded resources on Unix (requires resources recompilation).
- Fixed freeing of "static" alpha data in wxImage (Axel Gembe).
- Added tab mouse click events to wxAuiNotebook (Ben Williams).
- Option for middle-click tab close in wxAuiNotebook (Ben Williams).
- Added wxAuiNotebook::SetFont, GetTabCtrlHeight, GetHeightForPageHeight.
- Fixed caption clicking being ignored on centred wxAUI panel.
- Added AdvanceSelection, ShowWindowMenu functions and keyboard handling to
  wxAuiNotebook.
- Added wxAUI_NB_SUPPORT for standard wxAuiNotebook art (Langhammer).
- Added event for double clicks on wxAuiNotebook tab background.
- Added events for wxAuiNotebook tab dragging and closing notification.
- Fixed some problems handling unusual wxAUI pane activation order in wxGTK.